// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should convert valintaperuste form with valintatapa 1`] = `
{
  "esikatselu": false,
  "externalId": null,
  "hakutapaKoodiUri": "tapa_1#1",
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "joukko_1#1",
  "koulutustyyppi": "amk",
  "metadata": {
    "hakukelpoisuus": {
      "fi": "<h1>Fi hakukelpoisuus</h1>",
      "sv": "<h1>Sv hakukelpoisuus</h1>",
    },
    "kuvaus": {
      "fi": "<h1>Fi kuvaus</h1>",
      "sv": "<h1>Sv kuvaus</h1>",
    },
    "lisatiedot": {
      "fi": "<h1>Fi lisatiedot</h1>",
      "sv": "<h1>Sv lisatiedot</h1>",
    },
    "sisalto": [],
    "tyyppi": "amk",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Yleiskuvaus - fi</p>",
      "sv": "<p>Yleiskuvaus - sv</p>",
    },
    "valintatavat": [
      {
        "enimmaispisteet": 20.2,
        "kaytaMuuntotaulukkoa": false,
        "kynnysehto": {
          "fi": "<p>Fi kynnysehto</p>",
          "sv": "<p>Sv kynnysehto</p>",
        },
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "sisalto": [
          {
            "data": {
              "fi": "<h2>Fi sisalto</h2>",
              "sv": "<h2>Sv sisalto</h2>",
            },
            "tyyppi": "teksti",
          },
          {
            "data": {
              "rows": [
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "Fi column1",
                        "sv": "Sv column1",
                      },
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "Fi column2",
                        "sv": "Sv column2",
                      },
                    },
                  ],
                  "index": 0,
                },
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "Fi column3",
                        "sv": "Sv column3",
                      },
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "Fi column4",
                        "sv": "Sv column4",
                      },
                    },
                  ],
                  "index": 1,
                },
              ],
            },
            "tyyppi": "taulukko",
          },
        ],
        "vahimmaispisteet": 10.1,
        "valintatapaKoodiUri": "tapa_1#1",
      },
    ],
  },
  "muokkaaja": undefined,
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "julkaistu",
  "valintakokeet": [
    {
      "id": undefined,
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>",
          "sv": "<p>ohjeet ennakkovalmistautumiseen - sv</p>",
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>",
          "sv": "<p>Ohjeet erityisjärjestelyihin - sv</p>",
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle - fi</p>",
          "sv": "<p>Tietoa hakijalle - sv</p>",
        },
        "vahimmaispisteet": 30.4,
      },
      "nimi": {
        "fi": "nimi - fi",
        "sv": "nimi - sv",
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "jarjestamispaikka": {
            "fi": "jarjestamispaikka - fi",
            "sv": "jarjestamispaikka - sv",
          },
          "lisatietoja": {
            "fi": "<p>fi lisatietoja</p>",
            "sv": "<p>sv lisatietoja</p>",
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumeroKoodiUri": "posti_1#1",
          },
        },
      ],
      "tyyppiKoodiUri": "tyyppi_1#1",
    },
  ],
}
`;

exports[`Should convert valintaperuste form without valintatapa 1`] = `
{
  "esikatselu": false,
  "externalId": null,
  "hakutapaKoodiUri": "tapa_1#1",
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "joukko_1#1",
  "koulutustyyppi": "amk",
  "metadata": {
    "hakukelpoisuus": {
      "fi": "<h1>Fi hakukelpoisuus</h1>",
      "sv": "<h1>Sv hakukelpoisuus</h1>",
    },
    "kuvaus": {
      "fi": "<h1>Fi kuvaus</h1>",
      "sv": "<h1>Sv kuvaus</h1>",
    },
    "lisatiedot": {
      "fi": "<h1>Fi lisatiedot</h1>",
      "sv": "<h1>Sv lisatiedot</h1>",
    },
    "sisalto": [],
    "tyyppi": "amk",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Yleiskuvaus - fi</p>",
      "sv": "<p>Yleiskuvaus - sv</p>",
    },
    "valintatavat": [],
  },
  "muokkaaja": undefined,
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "julkaistu",
  "valintakokeet": [
    {
      "id": undefined,
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>",
          "sv": "<p>ohjeet ennakkovalmistautumiseen - sv</p>",
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>",
          "sv": "<p>Ohjeet erityisjärjestelyihin - sv</p>",
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle - fi</p>",
          "sv": "<p>Tietoa hakijalle - sv</p>",
        },
        "vahimmaispisteet": 30.4,
      },
      "nimi": {
        "fi": "nimi - fi",
        "sv": "nimi - sv",
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "jarjestamispaikka": {
            "fi": "jarjestamispaikka - fi",
            "sv": "jarjestamispaikka - sv",
          },
          "lisatietoja": {
            "fi": "<p>fi lisatietoja</p>",
            "sv": "<p>sv lisatietoja</p>",
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumeroKoodiUri": "posti_1#1",
          },
        },
      ],
      "tyyppiKoodiUri": "tyyppi_1#1",
    },
  ],
}
`;

exports[`Should not convert translations for non-selected language 1`] = `
{
  "esikatselu": false,
  "externalId": null,
  "hakutapaKoodiUri": "tapa_1#1",
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "joukko_1#1",
  "koulutustyyppi": "amk",
  "metadata": {
    "hakukelpoisuus": {
      "fi": "<h1>Fi hakukelpoisuus</h1>",
      "sv": "<h1>Sv hakukelpoisuus</h1>",
    },
    "kuvaus": {
      "fi": "<h1>Fi kuvaus</h1>",
      "sv": "<h1>Sv kuvaus</h1>",
    },
    "lisatiedot": {
      "fi": "<h1>Fi lisatiedot</h1>",
      "sv": "<h1>Sv lisatiedot</h1>",
    },
    "sisalto": [],
    "tyyppi": "amk",
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Yleiskuvaus - fi</p>",
      "sv": "<p>Yleiskuvaus - sv</p>",
    },
    "valintatavat": [
      {
        "enimmaispisteet": 20.2,
        "kaytaMuuntotaulukkoa": false,
        "kynnysehto": {
          "fi": "<p>Fi kynnysehto</p>",
          "sv": "<p>Sv kynnysehto</p>",
        },
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "sisalto": [
          {
            "data": {
              "fi": "<h2>Fi sisalto</h2>",
              "sv": "<h2>Sv sisalto</h2>",
            },
            "tyyppi": "teksti",
          },
          {
            "data": {
              "rows": [
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "Fi column1",
                        "sv": "Sv column1",
                      },
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "Fi column2",
                        "sv": "Sv column2",
                      },
                    },
                  ],
                  "index": 0,
                },
                {
                  "columns": [
                    {
                      "index": 0,
                      "text": {
                        "fi": "Fi column3",
                        "sv": "Sv column3",
                      },
                    },
                    {
                      "index": 1,
                      "text": {
                        "fi": "Fi column4",
                        "sv": "Sv column4",
                      },
                    },
                  ],
                  "index": 1,
                },
              ],
            },
            "tyyppi": "taulukko",
          },
        ],
        "vahimmaispisteet": 10.1,
        "valintatapaKoodiUri": "tapa_1#1",
      },
    ],
  },
  "muokkaaja": undefined,
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "julkaistu",
  "valintakokeet": [
    {
      "id": undefined,
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>",
          "sv": "<p>ohjeet ennakkovalmistautumiseen - sv</p>",
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>",
          "sv": "<p>Ohjeet erityisjärjestelyihin - sv</p>",
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle - fi</p>",
          "sv": "<p>Tietoa hakijalle - sv</p>",
        },
        "vahimmaispisteet": 30.4,
      },
      "nimi": {
        "fi": "nimi - fi",
        "sv": "nimi - sv",
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "jarjestamispaikka": {
            "fi": "jarjestamispaikka - fi",
            "sv": "jarjestamispaikka - sv",
          },
          "lisatietoja": {
            "fi": "<p>fi lisatietoja</p>",
            "sv": "<p>sv lisatietoja</p>",
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumeroKoodiUri": "posti_1#1",
          },
        },
      ],
      "tyyppiKoodiUri": "tyyppi_1#1",
    },
  ],
}
`;
